# Pedestrian-reidentification

./: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  Color.cpp  Color.h  Descriptor.cpp  Descriptor.h  HOGTrainer.cpp  HOGTrainer.h  HSVConverter.cpp  HSVConverter.h  Human.cpp  Human.h  MultiView.cpp  MultiView.h  README.md  Reidentification  ReidentificationAlg.cpp  ReidentificationAlg.h  ReidentificationData.cpp  ReidentificationData.h  ReidentificationThread.cpp  ReidentificationThread.h  UIFunctions.cpp  UIFunctions.h  View.cpp  View.h  gui.glade  gui.glade~  main.cpp  main.h
descriptors/: FilterBank.cpp  FilterBank.h  GaborData.h  GaborDescriptor.cpp  GaborDescriptor.h  HistData.h  HistDescriptor.cpp  HistDescriptor.h  KMeansDescriptor.cpp  KMeansDescriptor.h  Kalman.cpp  Kalman.h  KalmanData.h  OpticalFlow.cpp  OpticalFlow.h  OpticalFlowData.h
haar/: HaarData.h  HaarDetector.cpp  HaarDetector.h
models/: Human.cpp  Human.h  HumanData.h
